7. Nov. 2011 - amo - clean up, update JavaDoc, generate JavaDoc ... see doc Folder